{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 46,
  "lineage": "b99a035a-0e0b-e8ab-27cb-c1275962346a",
  "resources": [
    {
      "module": "module.terraform-mongodb",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongodb",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04620eee0f396d061",
            "arn": "arn:aws:ec2:ap-south-1:414081954578:instance/i-0f36529f63bd88c7f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f36529f63bd88c7f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c93851863c3c06de",
            "private_dns": "ip-10-0-1-214.ap-south-1.compute.internal",
            "private_ip": "10.0.1.214",
            "public_ip": "13.233.161.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-012a55732ffec931e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a627eb1e893c69a6",
            "tags": {
              "Name": "New packer mongo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07afb7d0a8f3c9864"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-allowed",
            "aws_subnet.main-subnet-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f6d9cf3e899b5ec1",
            "owner_id": "414081954578",
            "tags": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0764255c48292bca5"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public-crt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-044e9042ccdc55c25",
            "owner_id": "414081954578",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f6d9cf3e899b5ec1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-crt"
            },
            "vpc_id": "vpc-0764255c48292bca5"
          },
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-crta-public-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cc330bf9b97e9da",
            "route_table_id": "rtb-044e9042ccdc55c25",
            "subnet_id": "subnet-0a627eb1e893c69a6"
          },
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_route_table.main-public-crt",
            "aws_subnet.main-subnet-public-1",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:414081954578:security-group/sg-07afb7d0a8f3c9864",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07afb7d0a8f3c9864",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20200428130132757400000001",
            "name_prefix": null,
            "owner_id": "414081954578",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-db-allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0764255c48292bca5"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-subnet-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:414081954578:subnet/subnet-0a627eb1e893c69a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a627eb1e893c69a6",
            "map_public_ip_on_launch": true,
            "owner_id": "414081954578",
            "tags": {
              "Name": "main-subnet-public-1"
            },
            "vpc_id": "vpc-0764255c48292bca5"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:414081954578:vpc/vpc-0764255c48292bca5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0691ccf8331e8be6b",
            "default_route_table_id": "rtb-053316bab7ea26aee",
            "default_security_group_id": "sg-0a6cd1b3b69790a52",
            "dhcp_options_id": "dopt-b0b24edb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0764255c48292bca5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-053316bab7ea26aee",
            "owner_id": "414081954578",
            "tags": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}